test/regress/select.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7f\03\82\80\80\80\00\01\00\0a\96\80\80"
    "\80\00\01\90\80\80\80\00\00\41\00\41\00\41\00\41"
    "\00\41\01\1c\02\7f\7f\0b"
  )
  "invalid result arity"
)
